--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,7 @@ a.link-style1 {
 }
 
 @media (max-width: 1080px) {
+
   .title-black,
   .title-black.two {
     font-size: 32px !important;
@@ -288,21 +289,25 @@ a.link-style1 {
 }
 
 @media (max-width: 600px) {
+
   .title-black,
   .title-black.two {
     font-size: 30px !important;
     line-height: 38px;
   }
+
   p {
     font-size: 16px;
     line-height: 26px;
   }
+
   .title-orange {
     font-size: 16px;
   }
 }
 
 @media (max-width: 480px) {
+
   .title-black,
   .title-black.two {
     font-size: 26px !important;
@@ -321,6 +326,7 @@ a.link-style1 {
 }
 
 @media (max-width: 375px) {
+
   .btn-white,
   .btn-style {
     font-size: 16px;
@@ -392,6 +398,7 @@ button#trigger-overlay {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+
 .overlay ul {
   list-style: none;
   padding: 0;
@@ -400,12 +407,14 @@ button#trigger-overlay {
   height: 100%;
   position: relative;
 }
+
 .overlay ul li {
   display: block;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   line-height: 3em;
 }
+
 .overlay ul li a {
   font-size: 20px;
   font-weight: 600;
@@ -449,18 +458,22 @@ button#trigger-overlay {
     min-height: 34px;
   }
 }
+
 @media (max-width: 767px) {
   .overlay ul li a {
     font-size: 16px;
   }
+
   .overlay ul li {
     line-height: 2.5em;
   }
 }
+
 @media (max-width: 600px) {
   .overlay ul li a {
     font-size: 16px;
   }
+
   .overlay ul li {
     line-height: 2.2em;
   }
@@ -501,14 +514,10 @@ button#trigger-overlay {
   position: relative;
   transform: scale(var(--ggs, 1));
   height: 24px;
-  background: linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat
-      5px -6px/2px 6px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px 14px/2px
-      6px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat -8px 5px/6px
-      2px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 14px 5px/6px
-      2px;
+  background: linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px -6px/2px 6px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px 14px/2px 6px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat -8px 5px/6px 2px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 14px 5px/6px 2px;
   border-radius: 100px;
   box-shadow: inset 0 0 0 2px;
   border: 6px solid transparent;
@@ -579,11 +588,11 @@ button#trigger-overlay {
   color: #eee;
 }
 
-input:checked + .mode-container i.gg-sun {
+input:checked+.mode-container i.gg-sun {
   display: block;
 }
 
-input:checked + .mode-container i.gg-moon {
+input:checked+.mode-container i.gg-moon {
   display: none;
 }
 
@@ -635,11 +644,13 @@ input:checked + .mode-container i.gg-moon {
   top: 15px;
   cursor: pointer;
 }
+
 @media (max-width: 600px) {
   .right-content .search-bar {
     display: none;
   }
 }
+
 h1 a.logo-brand {
   margin: 0;
   padding: 0;
@@ -677,41 +688,49 @@ h1 a.logo-brand {
   line-height: 28px;
   color: #fff;
 }
+
 @media (max-width: 1190px) {
   .banner .banner-content h3 {
     font-size: 48px;
     line-height: 58px;
   }
 }
+
 @media (max-width: 992px) {
   .banner .banner-content h3 {
     font-size: 44px;
     line-height: 53px;
   }
 }
+
 @media (max-width: 800px) {
   .banner .banner-content h3 {
     font-size: 40px;
     line-height: 50px;
   }
+
   .banner {
     min-height: 600px;
     margin-top: 60px;
   }
 }
+
 @media (max-width: 480px) {
   .banner .banner-content h3 {
     font-size: 28px;
     line-height: 38px;
   }
+
   .banner .banner-content {
     max-width: 500px;
     margin-top: 30px;
   }
+
   .banner {
     min-height: 450px;
   }
 }
+
 /*--//banner-section--*/
 
 /*--/footer--*/
@@ -817,9 +836,11 @@ h1 a.logo-brand {
   border-radius: var(--border-radius);
   transition: 0.3s;
 }
+
 .main-social-footer a span.fa {
   line-height: 36px;
 }
+
 .main-social-footer a:hover {
   background: var(--primary-color);
   transition: 0.3s;
@@ -905,6 +926,7 @@ h1 a.logo-brand {
 }
 
 @media (max-width: 415px) {
+
   .footer-main .footer-list ul li,
   .footer-main .midd-footer-29:nth-child(1) .footer-list ul li:last-child {
     margin-bottom: 8px;
@@ -913,4 +935,100 @@ h1 a.logo-brand {
   .footer-main a.navbar-brand {
     font-size: 26px;
   }
+}
+
+
+
+
+
+/* .table */
+
+.table {
+  padding: 50px 0;
+}
+
+.table-title {
+  text-align: center;
+}
+
+.table__flex {
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.table__item img {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  border-radius: 6px;
+
+
+}
+
+.table__item {
+  position: relative;
+  margin: 20px 0;
+}
+
+.table__info {
+  position: absolute;
+  left: 30px;
+  bottom: 80px;
+  width: 0%;
+  height: 0%;
+}
+
+.table__img {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  border-radius: 10px;
+  
+}
+
+.table__overplay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent
+
+}
+
+.table__item:hover .table__overplay {
+  background-color: rgba(220, 220, 220, 0.189);
+  transition: all 0.5s;
+}
+
+.table__info h4 {
+  font-size: 22px;
+  line-height: 30px;
+  color: #fff;
+  font-weight: 700;
+
+}
+
+.table__info span {
+  font-weight: 600;
+  color: var(--secondary-color);
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+
+.table__item .table__img::after {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  content: " ";
+  position: absolute;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.53) 69%, rgba(0, 0, 0, 0.76) 100%);
+  transition-duration: 300ms;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
 }
