--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,7 @@ a.link-style1 {
 }
 
 @media (max-width: 1080px) {
+
   .title-black,
   .title-black.two {
     font-size: 32px !important;
@@ -288,21 +289,25 @@ a.link-style1 {
 }
 
 @media (max-width: 600px) {
+
   .title-black,
   .title-black.two {
     font-size: 30px !important;
     line-height: 38px;
   }
+
   p {
     font-size: 16px;
     line-height: 26px;
   }
+
   .title-orange {
     font-size: 16px;
   }
 }
 
 @media (max-width: 480px) {
+
   .title-black,
   .title-black.two {
     font-size: 26px !important;
@@ -321,6 +326,7 @@ a.link-style1 {
 }
 
 @media (max-width: 375px) {
+
   .btn-white,
   .btn-style {
     font-size: 16px;
@@ -392,6 +398,7 @@ button#trigger-overlay {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+
 .overlay ul {
   list-style: none;
   padding: 0;
@@ -400,12 +407,14 @@ button#trigger-overlay {
   height: 100%;
   position: relative;
 }
+
 .overlay ul li {
   display: block;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   line-height: 3em;
 }
+
 .overlay ul li a {
   font-size: 20px;
   font-weight: 600;
@@ -449,18 +458,22 @@ button#trigger-overlay {
     min-height: 34px;
   }
 }
+
 @media (max-width: 767px) {
   .overlay ul li a {
     font-size: 16px;
   }
+
   .overlay ul li {
     line-height: 2.5em;
   }
 }
+
 @media (max-width: 600px) {
   .overlay ul li a {
     font-size: 16px;
   }
+
   .overlay ul li {
     line-height: 2.2em;
   }
@@ -501,14 +514,10 @@ button#trigger-overlay {
   position: relative;
   transform: scale(var(--ggs, 1));
   height: 24px;
-  background: linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat
-      5px -6px/2px 6px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px 14px/2px
-      6px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat -8px 5px/6px
-      2px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 14px 5px/6px
-      2px;
+  background: linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px -6px/2px 6px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px 14px/2px 6px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat -8px 5px/6px 2px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 14px 5px/6px 2px;
   border-radius: 100px;
   box-shadow: inset 0 0 0 2px;
   border: 6px solid transparent;
@@ -579,11 +588,11 @@ button#trigger-overlay {
   color: #eee;
 }
 
-input:checked + .mode-container i.gg-sun {
+input:checked+.mode-container i.gg-sun {
   display: block;
 }
 
-input:checked + .mode-container i.gg-moon {
+input:checked+.mode-container i.gg-moon {
   display: none;
 }
 
@@ -635,11 +644,13 @@ input:checked + .mode-container i.gg-moon {
   top: 15px;
   cursor: pointer;
 }
+
 @media (max-width: 600px) {
   .right-content .search-bar {
     display: none;
   }
 }
+
 h1 a.logo-brand {
   margin: 0;
   padding: 0;
@@ -677,42 +688,159 @@ h1 a.logo-brand {
   line-height: 28px;
   color: #fff;
 }
+
 @media (max-width: 1190px) {
   .banner .banner-content h3 {
     font-size: 48px;
     line-height: 58px;
   }
 }
+
 @media (max-width: 992px) {
   .banner .banner-content h3 {
     font-size: 44px;
     line-height: 53px;
   }
 }
+
 @media (max-width: 800px) {
   .banner .banner-content h3 {
     font-size: 40px;
     line-height: 50px;
   }
+
   .banner {
     min-height: 600px;
     margin-top: 60px;
   }
 }
+
 @media (max-width: 480px) {
   .banner .banner-content h3 {
     font-size: 28px;
     line-height: 38px;
   }
+
   .banner .banner-content {
     max-width: 500px;
     margin-top: 30px;
   }
+
   .banner {
     min-height: 450px;
   }
 }
+
 /*--//banner-section--*/
+
+/*book table*/
+.book__table {
+  background: var(--primary-color);
+}
+
+.book-table-image {
+  background: url(../images/banner3.jpg) no-repeat center;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+  min-height: 600px;
+}
+
+.book-table-image::before {
+  content: "";
+  background: rgb(16 15 19 / 46%);
+  position: absolute;
+  top: 0;
+  min-height: 100%;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.book__table p {
+  color: #ffdfc9;
+}
+
+.icon {
+  width: 70px;
+  height: 70px;
+  text-align: center;
+  background: var(--bg-light);
+  line-height: 70px;
+  border-radius: var(--border-radius);
+  transition: 0.3s ease-in-out;
+}
+
+.box-wrap:hover .icon {
+  background-color: var(--primary-color);
+  transition: 0.3s ease-in-out;
+}
+
+.box-wrap:hover .icon span.fa {
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+
+.icon span.fa {
+  color: var(--primary-color);
+  font-size: 25px;
+  line-height: 70px;
+}
+
+.icons-area-content .icon {
+  background: #fff;
+}
+
+.icons-area-content:hover .icon span.fa {
+  color: var(--secondary-color);
+  transition: 0.3s ease-in-out;
+}
+
+.icons-area {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 40px;
+}
+
+.icons-area .text-under-icon {
+  display: block;
+  color: var(--heading-color);
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+.icons-area .text-under-icon:hover {
+  opacity: 0.9;
+}
+
+.icons-area {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 30px;
+  grid-gap: 30px;
+}
+
+@media all and (max-width:992px) {
+  .icons-area {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 30px;
+    grid-gap: 20px 10px;
+  }
+
+  .icons-area .text-under-icon {
+    font-size: 18px;
+  }
+
+  .book-table-image {
+
+    min-height: 200px;
+  }
+}
+
+/*/book table*/
 
 /*--/footer--*/
 .copyright #movetop {
@@ -817,9 +945,11 @@ h1 a.logo-brand {
   border-radius: var(--border-radius);
   transition: 0.3s;
 }
+
 .main-social-footer a span.fa {
   line-height: 36px;
 }
+
 .main-social-footer a:hover {
   background: var(--primary-color);
   transition: 0.3s;
@@ -905,6 +1035,7 @@ h1 a.logo-brand {
 }
 
 @media (max-width: 415px) {
+
   .footer-main .footer-list ul li,
   .footer-main .midd-footer-29:nth-child(1) .footer-list ul li:last-child {
     margin-bottom: 8px;
