chỉnh sửa overlay

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ select,
 label,
 li,
 span {
-  -webkit-appearance: none;
+  appearance: none;
   outline: none;
   font-family: 'Quicksand', sans-serif;
 }
@@ -395,7 +395,7 @@ button#trigger-overlay {
   position: relative;
   top: 50%;
   height: 60%;
-  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
@@ -410,7 +410,7 @@ button#trigger-overlay {
 
 .overlay ul li {
   display: block;
-  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   backface-visibility: hidden;
   line-height: 3em;
 }
@@ -420,7 +420,7 @@ button#trigger-overlay {
   font-weight: 600;
   display: block;
   color: #fff;
-  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
   transition: color 0.2s;
 }
 
@@ -433,18 +433,18 @@ button#trigger-overlay {
 .overlay-scale {
   visibility: hidden;
   opacity: 0;
-  -webkit-transform: scale(0.9);
   transform: scale(0.9);
-  -webkit-transition: -webkit-transform 0.2s, opacity 0.2s, visibility 0s 0.2s;
+  transform: scale(0.9);
+  transition: transform 0.2s, opacity 0.2s, visibility 0s 0.2s;
   transition: transform 0.2s, opacity 0.2s, visibility 0s 0.2s;
 }
 
 .overlay-scale.open {
   visibility: visible;
   opacity: 1;
-  -webkit-transform: scale(1);
   transform: scale(1);
-  -webkit-transition: -webkit-transform 0.4s, opacity 0.4s;
+  transform: scale(1);
+  transition: transform 0.4s, opacity 0.4s;
   transition: transform 0.4s, opacity 0.4s;
 }
 
@@ -1060,7 +1060,7 @@ h1 a.logo-brand {
 }
 
 .footer-main .map-iframe-ft iframe {
-  -webkit-filter: var(--iframe-filter);
+  filter: var(--iframe-filter);
   -moz-filter: var(--iframe-filter);
   -ms-filter: var(--iframe-filter);
   -o-filter: var(--iframe-filter);
