--- a/css/style.css
+++ b/css/style.css
@@ -1452,3 +1452,95 @@ p.count-text {
 
 /*--//FOOTER--*/
 
+/* video */
+
+.video__BG {
+  padding: 3rem 0;
+}
+
+.video__nutplaygrid {
+  background: url(../images/banner3.jpg) no-repeat center;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+  display: grid;
+  align-items: center;
+  height: 500px;
+  border-radius: var(--border-radius);
+}
+
+.video__nutplaygrid::before {
+
+  content: "";
+  background: rgb(16 15 19 / 60%);
+  position: absolute;
+  top: 0;
+  min-height: 100%;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  border-radius: var(--border-radius);
+}
+
+
+.video__nutplaygrid a {
+  text-align: center;
+}
+
+.video__nutplaygrid .video-play-icon {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  font-size: 26px;
+  padding-left: 2px;
+  text-align: center;
+  line-height: 76px;
+  border-radius: 50%;
+  transition: 0.3s ease-in-out;
+  -webkit-animation: ripple 1s linear infinite;
+  animation: ripple 1s linear infinite;
+  color: var(--primary-color);
+  border: transparent;
+  background: #fff;
+}
+
+.video__nutplaygrid span:hover {
+  transform: scale(1.2);
+  transition: 0.3s ease-in-out;
+  background: var(--primary-color);
+  border: transparent;
+  color: #fff;
+}
+
+.video__nutplaygrid .play-view {
+  left: 0;
+  right: 0;
+  top: calc(50% - 40px);
+}
+#small-dialog {
+  max-width: 750px;
+  margin: 40px auto;
+  position: relative;
+}
+
+.mfp-hide {
+  display: none;
+}
+
+
+@keyframes ripple {
+  0% {
+    box-shadow: 0 0 0 0 rgb(255 255 255 / 25%), 0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%);
+  }
+
+  100% {
+    box-shadow: 0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%), 0 0 0 40px rgba(50, 100, 245, 0);
+  }
+}
+
+
+
+
+
+
+/* video */
