--- a/css/style.css
+++ b/css/style.css
@@ -886,13 +886,16 @@ h1 a.logo-brand {
 
 
 .Categories__overplay {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: transparent
+  height: 40%;
+  content: " ";
+  position: absolute;
+  background: rgba(0, 0, 0, 0);
+  transition-duration: 300ms;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
 }
 
 .Categories__item:hover img {
@@ -1452,3 +1455,61 @@ p.count-text {
 
 /*--//FOOTER--*/
 
+
+/* Testimonials */
+.Testimonials {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.Testimonials__img {
+  left: 0px;
+  top: 0px;
+  width: 85px;
+  height: 85px;
+  overflow: hidden;
+  border-radius: 50%;
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+.Testimonials__cont blockquote {
+  margin: 0 0 1rem;
+}
+
+.Testimonials__cont blockquote q::before {
+  font-size: 50px;
+  color: var(--primary-color);
+  display: block;
+  font-family: initial;
+}
+
+.Testimonials__cont q {
+  font-size: 24px;
+  line-height: 36px;
+  color: var(--heading-color);
+  font-weight: 600;
+  font-style: italic;
+  letter-spacing: 1px;
+}
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+  background: var(--primary-color);
+}
+
+
+
+@media (max-width: 675px) {
+  .Testimonials blockquote q {
+    font-size: 22px;
+    line-height: 32px;
+  }
+}
+@media (max-width: 475px) {
+  .Testimonials blockquote q {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+/* Testimonials */
