--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@
   --footer-bg: #000;
   --card-bg: #fff;
 }
-boy.dark
+
 [data-theme='dark'] {
   --primary-color: #ff6600;
   --secondary-color: #ffc600;
@@ -275,7 +275,6 @@ a.link-style1 {
 }
 
 @media (max-width: 1080px) {
-
   .title-black,
   .title-black.two {
     font-size: 32px !important;
@@ -291,7 +290,6 @@ a.link-style1 {
 }
 
 @media (max-width: 600px) {
-
   .title-black,
   .title-black.two {
     font-size: 30px !important;
@@ -309,7 +307,6 @@ a.link-style1 {
 }
 
 @media (max-width: 480px) {
-
   .title-black,
   .title-black.two {
     font-size: 26px !important;
@@ -328,7 +325,6 @@ a.link-style1 {
 }
 
 @media (max-width: 375px) {
-
   .btn-white,
   .btn-style {
     font-size: 16px;
@@ -347,7 +343,6 @@ a.link-style1 {
 }
 
 /* //THIẾT LẬP 1 SỐ NÚT VÀ CHỮ DÙNG CHUNG */
-
 
 /* OVERLAY */
 /* Overlay style */
@@ -519,10 +514,14 @@ button#trigger-overlay {
   position: relative;
   transform: scale(var(--ggs, 1));
   height: 24px;
-  background: linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px -6px/2px 6px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px 14px/2px 6px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat -8px 5px/6px 2px,
-    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 14px 5px/6px 2px;
+  background: linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat
+      5px -6px/2px 6px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 5px 14px/2px
+      6px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat -8px 5px/6px
+      2px,
+    linear-gradient(180deg, currentColor 4px, transparent 0) no-repeat 14px 5px/6px
+      2px;
   border-radius: 100px;
   box-shadow: inset 0 0 0 2px;
   border: 6px solid transparent;
@@ -593,11 +592,11 @@ button#trigger-overlay {
   color: #eee;
 }
 
-input:checked+.mode-container i.gg-sun {
+input:checked + .mode-container i.gg-sun {
   display: block;
 }
 
-input:checked+.mode-container i.gg-moon {
+input:checked + .mode-container i.gg-moon {
   display: none;
 }
 
@@ -752,7 +751,7 @@ h1 a.logo-brand {
 }
 
 .book-table-image::before {
-  content: "";
+  content: '';
   background: rgb(16 15 19 / 46%);
   position: absolute;
   top: 0;
@@ -827,7 +826,7 @@ h1 a.logo-brand {
   grid-gap: 30px;
 }
 
-@media all and (max-width:992px) {
+@media all and (max-width: 992px) {
   .icons-area {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -840,7 +839,6 @@ h1 a.logo-brand {
   }
 
   .book-table-image {
-
     min-height: 200px;
   }
 }
@@ -884,13 +882,12 @@ h1 a.logo-brand {
   height: 0%;
 }
 
-
 .Categories__overplay {
   bottom: 0;
   left: 0;
   width: 100%;
   height: 40%;
-  content: " ";
+  content: ' ';
   position: absolute;
   background: rgba(0, 0, 0, 0);
   transition-duration: 300ms;
@@ -908,7 +905,6 @@ h1 a.logo-brand {
   line-height: 30px;
   color: #fff;
   font-weight: 700;
-
 }
 
 .Categories__info span {
@@ -918,21 +914,25 @@ h1 a.logo-brand {
   letter-spacing: 1px;
 }
 
-
 .Categories__item .Categories__img::after {
   bottom: 0;
   left: 0;
   width: 100%;
   height: 40%;
-  content: " ";
+  content: ' ';
   position: absolute;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.53) 69%, rgba(0, 0, 0, 0.76) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0,
+    rgba(0, 0, 0, 0.53) 69%,
+    rgba(0, 0, 0, 0.76) 100%
+  );
   transition-duration: 300ms;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
 }
 
-@media all and (max-width:800px) {
+@media all and (max-width: 800px) {
   .Categories .Categories__item a h4 {
     font-size: 18px;
     line-height: 28px;
@@ -987,7 +987,7 @@ h1 a.logo-brand {
   font-weight: 400;
   color: var(--font-color);
   font-size: 20px;
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .box-wrap p {
@@ -1012,7 +1012,6 @@ h1 a.logo-brand {
 
 /*--//SERVICES--*/
 
-
 /* STATS BANNER */
 
 .banner2 {
@@ -1023,7 +1022,7 @@ h1 a.logo-brand {
 }
 
 .banner2:before {
-  content: "";
+  content: '';
   background: rgb(16 15 19 / 66%);
   position: absolute;
   top: 0;
@@ -1070,7 +1069,6 @@ h1 a.logo-brand {
 
 /* /STATS BANNER */
 
-
 /*-- STATS --*/
 section.stats {
   margin-top: -70px;
@@ -1088,13 +1086,14 @@ section.stats {
   padding: 40px 20px;
   border-radius: var(--border-radius);
   text-align: center;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .counter:hover {
   transform: translateY(-0.25rem);
-  box-shadow: rgba(46, 41, 51, 0.08) 0px 2px 4px, rgba(71, 63, 79, 0.16) 0px 5px 10px;
-  transition: .3s ease;
+  box-shadow: rgba(46, 41, 51, 0.08) 0px 2px 4px,
+    rgba(71, 63, 79, 0.16) 0px 5px 10px;
+  transition: 0.3s ease;
 }
 
 .counter span.fa {
@@ -1120,7 +1119,7 @@ p.count-text {
   font-weight: 600;
 }
 
-@media (max-width:992px) {
+@media (max-width: 992px) {
   section.stats {
     margin-top: 0px;
   }
@@ -1145,7 +1144,6 @@ p.count-text {
 
 /* //STATS */
 
-
 /*--BLOG--*/
 .blogs {
   background: var(--bg-grey);
@@ -1169,7 +1167,7 @@ p.count-text {
   font-size: 12px;
   margin-bottom: 5px;
   display: inline-block;
-  letter-spacing: .05em;
+  letter-spacing: 0.05em;
 }
 
 .blogs .meta-info {
@@ -1177,7 +1175,7 @@ p.count-text {
   color: #fff;
   margin-left: 10px;
   font-size: 15px;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
 }
 
 .blogs .above-img-content {
@@ -1224,7 +1222,7 @@ p.count-text {
 .blogs .bottom-meta-info a {
   font-weight: 700;
   color: var(--heading-color);
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
 }
 
 .blogs .p-footer {
@@ -1238,9 +1236,9 @@ p.count-text {
   text-transform: capitalize;
   font-size: 16px;
   font-weight: 700;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   color: var(--heading-color);
-  opacity: .9;
+  opacity: 0.9;
 }
 
 .blogs a.read:hover {
@@ -1442,7 +1440,6 @@ p.count-text {
 }
 
 @media (max-width: 415px) {
-
   .footer-main .footer-list ul li,
   .footer-main .midd-footer-29:nth-child(1) .footer-list ul li:last-child {
     margin-bottom: 8px;
@@ -1454,7 +1451,6 @@ p.count-text {
 }
 
 /*--//FOOTER--*/
-
 
 /* Testimonials */
 .Testimonials {
@@ -1498,8 +1494,6 @@ p.count-text {
   background: var(--primary-color);
 }
 
-
-
 @media (max-width: 675px) {
   .Testimonials blockquote q {
     font-size: 22px;
@@ -1513,7 +1507,6 @@ p.count-text {
   }
 }
 /* Testimonials */
-
 
 /* video */
 
@@ -1533,8 +1526,7 @@ p.count-text {
 }
 
 .video__nutplaygrid::before {
-
-  content: "";
+  content: '';
   background: rgb(16 15 19 / 60%);
   position: absolute;
   top: 0;
@@ -1544,7 +1536,6 @@ p.count-text {
   z-index: -1;
   border-radius: var(--border-radius);
 }
-
 
 .video__nutplaygrid a {
   text-align: center;
@@ -1593,21 +1584,16 @@ p.count-text {
   color: #fff;
 }
 
-
-
 @keyframes ripple {
   0% {
-    box-shadow: 0 0 0 0 rgb(255 255 255 / 25%), 0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%);
+    box-shadow: 0 0 0 0 rgb(255 255 255 / 25%),
+      0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%);
   }
 
   100% {
-    box-shadow: 0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%), 0 0 0 40px rgba(50, 100, 245, 0);
+    box-shadow: 0 0 0 10px rgb(255 255 255 / 25%),
+      0 0 0 20px rgb(255 255 255 / 25%), 0 0 0 40px rgba(50, 100, 245, 0);
   }
 }
-
-
-
-
-
 
 /* video */
