--- a/css/style.css
+++ b/css/style.css
@@ -1577,11 +1577,22 @@ p.count-text {
   position: relative;
 }
 
-.mfp-hide {
-  display: none;
-}
+div#small-dialog iframe {
+  width: 100%;
+  height: 420px;
+  display: block;
+  border-radius: 10px;
+} 
+
 .mfp-close-btn-in .mfp-close {
   color: #fff;
+}
+.mfp-close {
+  
+  right: 0px;
+  top: -40px;
+ 
+  
 }
 
 @keyframes ripple {
